# realm-web

./: .dockerignore  Dockerfile  README.md  app.py  auth.py  docker-compose.yml
.github/workflows/: docker-ghcr.yml  release.yml
backend/: Cargo.toml
backend/src/: config.rs  engine.rs  main.rs
backend/src/auth/: rate_limit.rs
backend/src/domain/: rule.rs
backend/src/relay/: control.rs  counted.rs  endpoint.rs  meter.rs  mod.rs
backend/src/relay/tcp/: mod.rs  socket.rs
backend/src/relay/udp/: batch.rs  mod.rs  sockmap.rs
backend/src/routes/: rules.rs
backend/src/services/: mod.rs  port.rs  rule_service.rs  traffic_service.rs
frontend/src/: style.css
frontend/src/views/: DashboardView.vue
static/: index.html  login.html
